<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#36BA98"
    app:circularflow_radiusInDP="300dp" >

    <TextView
        android:id="@+id/operation2"
        android:layout_width="32dp"
        android:layout_height="35dp"
        android:layout_marginTop="54dp"
        android:text="@string/nothing"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/num1"
        app:layout_constraintTop_toBottomOf="@+id/calculator" />

    <EditText
        android:id="@+id/num2"
        android:layout_width="91dp"
        android:layout_height="79dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="324dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/num2"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="#F0F0F0"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="87dp"
        android:layout_height="79dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="38dp"
        android:background="#E9C46A"
        android:text="@string/sum"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num2" />

    <Button
        android:id="@+id/button5"
        android:layout_width="87dp"
        android:layout_height="79dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="23dp"
        android:background="#E9C46A"
        android:text="@string/multiply"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button7"
        android:layout_width="87dp"
        android:layout_height="79dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="23dp"
        android:background="#E9C46A"
        android:text="@string/divide"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button"
        android:layout_width="87dp"
        android:layout_height="79dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="38dp"
        android:background="#E9C46A"
        android:text="@string/subtract"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/num2" />

    <TextView
        android:id="@+id/calculator"
        android:layout_width="329dp"
        android:layout_height="44dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="35dp"
        android:text="@string/numBar"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameDisplay" />

    <TextView
        android:id="@+id/operation"
        android:layout_width="44dp"
        android:layout_height="41dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="131dp"
        android:text="@string/nothing"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/num1"
        app:layout_constraintTop_toBottomOf="@+id/nameDisplay" />

    <TextView
        android:id="@+id/nameDisplay"
        android:layout_width="344dp"
        android:layout_height="40dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:text="@string/nameDisplay"
        android:textAlignment="center"
        android:textColor="#F0F0F0"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/name"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="96dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nameInput"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="#F0F0F0"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/num1"
        android:layout_width="91dp"
        android:layout_height="79dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="324dp"
        android:ems="10"
        android:hint="@string/num1"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="#F0F0F0"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/numRes"
        android:layout_width="89dp"
        android:layout_height="77dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="110dp"
        android:gravity="center_vertical"
        android:text="@string/res"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/num2"
        app:layout_constraintTop_toBottomOf="@+id/nameDisplay"
        tools:ignore="RtlCompat" />

    <Button
        android:id="@+id/button8"
        android:layout_width="213dp"
        android:layout_height="51dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="23dp"
        android:background="#E9C46A"
        android:text="@string/redirect"
        android:textAlignment="center"
        android:textColor="#6D4C41"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

</androidx.constraintlayout.widget.ConstraintLayout>