<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#272727">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="115dp"
        android:layout_height="43dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="28dp"
        android:text="@string/grade10"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="68dp"
        android:contentDescription="pfp"
        android:src="@drawable/me"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="351dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/student"
        android:textAlignment="center"
        android:textColor="#F8F2F2"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="327dp"
        android:layout_height="39dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/studentDetails"
        android:textAlignment="center"
        android:textColor="#E2DCDC"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="213dp"
        android:layout_height="38dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/marksHead"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="115dp"
        android:layout_height="43dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="100dp"
        android:text="@string/grade12"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="115dp"
        android:layout_height="43dp"
        android:layout_marginStart="216dp"
        android:layout_marginTop="28dp"
        android:text="@string/score10"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="115dp"
        android:layout_height="43dp"
        android:layout_marginStart="216dp"
        android:layout_marginTop="100dp"
        android:text="@string/score12"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/button3"
        android:layout_width="203dp"
        android:layout_height="51dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="28dp"
        android:background="#00BCD4"
        android:text="@string/back"
        android:textAlignment="center"
        android:textSize="20sp"
        app:circularflow_defaultRadius="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>